--- a/website/package.json
+++ b/website/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "mitt": "^2.1.0",
+    "particles.vue3": "^1.1.11",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.1.1",
+    "tsparticles": "^1.18.11",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
