Fixed homepage and Bg

--- a/src/assets/images/data/uni-MAProject.json
+++ b/src/assets/images/data/uni-MAProject.json
@@ -7,7 +7,7 @@
             "title": "Profile Settings"
         }  ,
         {
-            "itemImageSrc": "images/photos/Server.png",
+            "itemImageSrc": "images/photos/eportfolio-V5.png",
             "thumbnailImageSrc": "",
             "alt": "",
             "title": "Profile Settings"
