--- a/src/assets/images/data/uni-MAProject.json
+++ b/src/assets/images/data/uni-MAProject.json
@@ -1,34 +1,28 @@
 {
     "data":[
         {
-            "itemImageSrc": "images/photos/customize.png",
+            "itemImageSrc": "images/photos/deploymentDiagram.png",
             "thumbnailImageSrc": "",
             "alt": "",
-            "title": "Profile Settings"
+            "title": "Server deployment diagram"
         }  ,
         {
-            "itemImageSrc": "images/photos/eportfolio-V5.png",
+            "itemImageSrc": "images/photos/postquestion2.png",
             "thumbnailImageSrc": "",
             "alt": "",
-            "title": "Profile Settings"
+            "title": "Mobile add question"
         }  ,
         {
-            "itemImageSrc": "images/photos/documentPreview.png",
+            "itemImageSrc": "images/photos/RightToAsk-1.png",
             "thumbnailImageSrc": "",
             "alt": "",
-            "title": "Document Preview Mode"
+            "title": "Mobile"
         },
         {
-            "itemImageSrc": "images/photos/genTimeline.png",
+            "itemImageSrc": "images/photos/Server.png",
             "thumbnailImageSrc": "",
             "alt": "",
-            "title": "Timeline"
-        },
-        {
-            "itemImageSrc": "images/photos/profile.png",
-            "thumbnailImageSrc": "",
-            "alt": "",
-            "title": "Profile Settings"
-        }  
+            "title": "Server"
+        }
     ]
 }
