--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.0",
     "mitt": "^2.1.0",
     "particles.vue3": "^1.1.11",
     "primeflex": "^2.0.0",
